# kf-ai-ops

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  otel-collector-config.yml  prometheus.yml  pyproject.toml
.github/actions/ai-analyzer/: action.yml
.github/actions/ai-optimizer/: action.yml
.github/workflows/: ai-optimizer.yml  ci.yml
ai-optimizer/: analyzer.py  optimizer.py  requirements.txt
app/: Dockerfile  main.py  requirements.txt  telemetry.py
app/tests/: __init__.py  test_api.py
dashboard/: index.html
infrastructure/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/modules/compute/: main.tf
infrastructure/modules/networking/: main.tf
infrastructure/modules/observability/: main.tf
